<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ezmower_sim</name>
  <version>0.0.1</version>
  <description>Launch files for the ezmower robot sim </description>
  <maintainer email="bcevikel19@ku.edu.tr">Berk Cevikel</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ezmower_robot</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
